--- a/index.html
+++ b/index.html
@@ -70,84 +70,17 @@
 </head>
 <body>
 
-    <span class="subject">Subject</span><br>
-    <span class="subject">Subject</span><br>
+    <span class="subject">Accounting Study Forms</span><br>
+    <span class="subject">MTSU</span><br>
     <hr>
-
-    <!-- Chapter -->
-    <div class="chapter">
-        <h1>Fundamental Accounting Principles:</h1>
-        <ul>
-            <li><a href="Attachment_1.pdf" target="_blank">Attachment 1</a></li>
-            <li><a href="Attachment_2.pdf" target="_blank">Attachment 2</a></li>
-            <li><a href="Attachment_3.pdf" target="_blank">Attachment 3</a></li>
-            <li><a href="Attachment_4.pdf" target="_blank">Attachment 4</a></li>
-            <li><a href="Attachment_5.pdf" target="_blank">Attachment 5</a></li>
-            <li><a href="Attachment_6.pdf" target="_blank">Attachment 6</a></li>
-            <li><a href="Attachment_7.pdf" target="_blank">Attachment 7</a></li>
-            <li><a href="Attachment_8.pdf" target="_blank">Attachment 8</a></li>
-            <li><a href="Attachment_9.pdf" target="_blank">Attachment 9</a></li>
-            <li><a href="Attachment_10.pdf" target="_blank">Attachment 10</a></li>
-            <li><a href="Attachment_11.pdf" target="_blank">Attachment 11</a></li>
-            <li><a href="Attachment_12.pdf" target="_blank">Attachment 12</a></li>
-            <li><a href="Attachment_13.pdf" target="_blank">Attachment 13</a></li>
-            <li><a href="Attachment_14.pdf" target="_blank">Attachment 14</a></li>
-            <li><a href="Attachment_15.pdf" target="_blank">Attachment 15</a></li>
-            <li><a href="Attachment_16.pdf" target="_blank">Attachment 16</a></li>
-            <li><a href="Attachment_17.pdf" target="_blank">Attachment 17</a></li>
-            <li><a href="Attachment_18.pdf" target="_blank">Attachment 18</a></li>
-            <li><a href="Attachment_19.pdf" target="_blank">Attachment 19</a></li>
-            <li><a href="Attachment_20.pdf" target="_blank">Attachment 20</a></li>
-        </ul>
-    </div>
-
-    <!-- Chapter -->
-    <div class="chapter">
-        <h1>Chapter:</h1>
-        <ul>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-        </ul>
-    </div>
-
-    <!-- Chapter -->
-    <div class="chapter">
-        <h1>Chapter:</h1>
-        <ul>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-        </ul>
-    </div>
-
-    <!-- Chapter -->
-    <div class="chapter">
-        <h1>Chapter:</h1>
-        <ul>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-        </ul>
-    </div>
-
-    <!-- Chapter -->
-    <div class="chapter">
-        <h1>Chapter:</h1>
-        <ul>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-            <li>Bullet point</li>
-        </ul>
-    </div>
-
-    <hr>
-    <br>
 
     <!-- Attachment Section -->
     <div class="attachments">
         <h1>Attachments:</h1>
         <ul>
+            <li><a href="https://www.mediafire.com/file/bd1r2n18bwjtiba/FAP.zip/file" target="_blank">Fundamental Accounting Principles</a></li>
+            <li><a href="Attachment_2.pdf" target="_blank">Cost Accounting</a></li>
+            <li><a href="Attachment_3.pdf" target="_blank">Intermediate Accounting</a></li>
             <li><a href="Attachment_1.pdf" target="_blank">Attachment 1</a></li>
             <li><a href="Attachment_2.pdf" target="_blank">Attachment 2</a></li>
             <li><a href="Attachment_3.pdf" target="_blank">Attachment 3</a></li>
