--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li><a href="Attachment_18.pdf" target="_blank">Attachment 18</a></li>
             <li><a href="Attachment_19.pdf" target="_blank">Attachment 19</a></li>
             <li><a href="Attachment_20.pdf" target="_blank">Attachment 20</a></li>
-            <li><a href="https://www.example.com" target="_blank">Web Link Example</a></li>
+            <li><a href="https://www.mediafire.com/file/59ctngdjzbv3dzd/ReviewTemplate.ods/file" target="_blank">Review Template</a></li>
         </ul>
     </div>
 
